--- a/aula012ex/ex019/estilo.css
+++ b/aula012ex/ex019/estilo.css
@@ -11,14 +11,18 @@ header {
 }
 
 section {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 10px;
-    height: 400px;
     width: 400px;
     margin: auto;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.366);
 
+}
+
+div {
+    text-align: center;
+    padding: 5px;
 }
 
 footer {
