--- a/aula016ex copy/style.css
+++ b/aula016ex copy/style.css
@@ -30,6 +30,10 @@ section {
     padding: 10px;
 }
 
+select {
+    width: 165px;
+}
+
 footer {
     text-align: center;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
