--- a/aula016ex copy/style.css
+++ b/aula016ex copy/style.css
@@ -27,11 +27,20 @@ section {
     margin: auto;
     border-radius: 10px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.442);
-    padding: 10px;
+    padding: 20px;
 }
 
 select {
     width: 165px;
+}
+
+div#res {
+    margin: 20px auto 0px auto;
+}
+
+div#res > p {
+    text-align: justify;
+    padding: 5px;
 }
 
 footer {
